# clend-protocol-cpi

./: README.md
.github/workflows/: publish.yml
clend-protocol-cpi/: Cargo.toml  README.md  idl.json  makefile
clend-protocol-cpi/src/: lib.rs
