[package]
name = "clend-protocol-cpi"
version = "0.1.0"
description = "CPI Bindings for Clend Protocol"
edition = "2021"
license = "MIT"
repository = "https://github.com/DeFi-Clend/clend-protocol-cpi"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.31.1"
